# KODEON

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_IMPLEMENTATION_ROADMAP.md  CONTRIBUTING.md  DEVELOPMENT_PROGRESS_SUMMARY.md  FILE_ORGANIZATION_PLAN.md  FINAL_ORGANIZATION_SUMMARY.md  HIGH_LEVEL_DEVELOPMENT_STRATEGY.md  LICENSE  MANIFESTO_ALIGNMENT_SUMMARY.md  MANIFESTO_DRIVEN_ADVANCED_DEVELOPMENT.md  MASTER_DEVELOPMENT_PLAN.md  MASTER_ORGANIZATION_PLAN.md  ORGANIZATION_SUMMARY.md  PHASE1_DEVELOPMENT_PLAN.md  README.md  ROADMAP.md
.github/: .github-PULL_REQUEST_TEMPLATE.md
community/: COMMUNITY_MANIFESTO.md  README.md
compiler/: Cargo.toml  LLVM_BACKEND_IMPLEMENTATION_PLAN.md  LLVM_BACKEND_TESTING.md  OPTIMIZATION_PASSES_SUMMARY.md  PARSER_IMPLEMENTATION_PLAN.md  STDLIB_INTEGRATION_SUMMARY.md  TRANSPARENCY_REPORT.md  build.ps1  build.sh
compiler/docs/: README.md
compiler/examples/: error_handling_example.kodeon  stdlib_test.kodeon
compiler/foundation/: Cargo.toml  README.md
compiler/foundation/src/: lib.rs  stdlib.rs
compiler/src/: cli.rs  error_messages.rs  ir.rs  lexer.rs  lib.rs  main.rs  main_foundation.rs  module_resolver.rs  module_resolver_test.rs  optimizer.rs  parser.rs  semantic_analyzer.rs  simplified_parser.rs
compiler/src/debugger/: cli.rs  debugger.rs  mod.rs
compiler/src/llvm_backend/: builder.rs  context.rs  mod.rs
compiler/tests/: concurrency_test.kodeon  concurrency_test.rs  concurrency_test_en.kodeon  debug_info_test.rs  debugger_test.rs  error_handling_test.rs  integration_test.rs  llvm_backend_concurrency_test.rs  llvm_backend_test.rs  optimizer_test.rs  package_management_test.rs  stdlib_integration_test.rs  test_package_resolution.rs
docs/: ADAPTIVE_IDE_IMPLEMENTATION_PLAN.md  ADAPTIVE_IDE_IMPLEMENTATION_SUMMARY.md  ADAPTIVE_IDE_PROGRESS_SUMMARY.md  AI_ASSISTANT_2_COMPLETION_ENHANCEMENTS.md  AI_ASSISTANT_2_IMPLEMENTATION_PLAN.md  AI_ASSISTANT_2_INTEGRATION_SUMMARY.md  (+68 more)
(+756 files in other folders)
