[package]
name = "kodeon-compiler"
version = "0.1.0"
edition = "2021"
authors = ["KODEON Team"]
description = "Compiler for the KODEON programming language"
repository = "https://github.com/kodeon/kodeon-compiler"
license = "MIT"

[dependencies]
# Lexer and parser utilities
regex = "1.0"
lazy_static = "1.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization (for AST and IR)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.9"

# File system operations
walkdir = "2.3"

# LLVM backend
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }

[dev-dependencies]
# Testing framework
criterion = "0.4"
tempfile = "3.0"

[[bin]]
name = "test_package_resolution"
path = "../test_package_resolution.rs"

[[bench]]
name = "compiler_benchmarks"
harness = false

[[test]]
name = "llvm_backend_test"
path = "tests/llvm_backend_test.rs"

[[test]]
name = "llvm_backend_extended_test"
path = "tests/llvm_backend_extended_test.rs"

[[test]]
name = "llvm_backend_concurrency_test"
path = "tests/llvm_backend_concurrency_test.rs"

[[test]]
name = "package_management_test"
path = "tests/package_management_test.rs"
